feat: style header

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <div class="hero">
         <div class="presentation">
           <h1>The 42 Project</h1>
-          <p>Statement</p>
+          <p>The 42 Project es un proyecto a largo plazo centrado en la adquisición y rédito económico de destrezas de alto valor. Con una filosofía basada en el valor compuesto, se tiene la intención de combinar diferentes áreas en pos de crear un mensaje y una estética únicos. El camino del fundador del 42 Project empieza con el web development.</p>
           <button>Join Us</button>
         </div>
         <img rel="example" src="images/_f4cf726d-8307-4cd6-9c20-6cb35ca96784.jpg" width="200px"> <!--svg ultra mega super-->
       </div>
      </div>
-     <div>
+     <div class="information">
         
      </div>
 </body>
