feat: Add information section layout

--- a/index.html
+++ b/index.html
@@ -28,7 +28,41 @@
       </div>
      </div>
      <div class="information">
-        
+        <h1>Razones</h1>
+        <div class="boxes">
+           <div class="box">
+            <div>
+              <img src="./images/_18cecc15-d044-4bec-b0f3-c5b56b2642c8.jpg" alt="dark wizard" width="250px">
+            </div>
+            <p>
+              Aquí se almacenarán las recetas de la vida, las cuales se irán añadiendo a lo largo del tiempo.
+            </p>
+           </div>
+           <div class="box">
+            <div>
+              <img src="./images/inner breath and his benefits 4.jpg"  alt="inner breath" width="250px">
+            </div>
+            <p>
+              Se hará un seguimiento del desarrollo de los procesos internos. 
+            </p>
+           </div>
+           <div class="box">
+            <div>
+              <img src="./images/post_image_medium.jpeg"  alt="pi harmony" width="250px">
+            </div>
+            <p>
+              Se mostrarán las diferentes formas de armonía y equilibrio.
+            </p>
+           </div>
+           <div class="box">
+            <div>
+              <img src="./images/the coins of hope. this is a special one.jpg" alt="value" width="250px">
+            </div>
+            <p>
+              Este es un depósito de valor, un lugar donde se guardan las monedas de la esperanza.
+            </p>
+           </div>
+        </div>
      </div>
 </body>
 </html>
