--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <div class="LOGO">LOGO</div>
+     <div class="links">
+        <ul>
+            <li>Link One</li>
+            <li>Link Two</li>
+            <li>Link Three</li>
+        </ul>
+     </div>
+  </header>
      <div class="header">
-      <header>
-        <div class="LOGO">LOGO</div>
-         <div class="links">
-            <ul>
-                <li>Link One</li>
-                <li>Link Two</li>
-                <li>Link Three</li>
-            </ul>
-         </div>
-      </header>
       <div class="hero">
         <div class="presentation">
           <h1>The 42 Project</h1>
@@ -28,41 +28,45 @@
       </div>
      </div>
      <div class="information">
+        <div class="prueba"></div>
         <h1>Razones</h1>
         <div class="boxes">
            <div class="box">
-            <div>
               <img src="./images/_18cecc15-d044-4bec-b0f3-c5b56b2642c8.jpg" alt="dark wizard" width="250px">
-            </div>
-            <p>
-              Aquí se almacenarán las recetas de la vida, las cuales se irán añadiendo a lo largo del tiempo.
-            </p>
+              <p class="leyenda">
+                Aquí se almacenarán las recetas de la vida, se irán añadiendo. 
+              </p>
            </div>
            <div class="box">
             <div>
               <img src="./images/inner breath and his benefits 4.jpg"  alt="inner breath" width="250px">
+              <p class="leyenda">
+                Se hará un seguimiento del desarrollo de los procesos internos. 
+              </p>
             </div>
-            <p>
-              Se hará un seguimiento del desarrollo de los procesos internos. 
-            </p>
            </div>
            <div class="box">
             <div>
               <img src="./images/post_image_medium.jpeg"  alt="pi harmony" width="250px">
+              <p class="leyenda">
+                Se mostrarán las diferentes formas de armonía y equilibrio.
+              </p>
             </div>
-            <p>
-              Se mostrarán las diferentes formas de armonía y equilibrio.
-            </p>
            </div>
            <div class="box">
             <div>
               <img src="./images/the coins of hope. this is a special one.jpg" alt="value" width="250px">
+              <p class="leyenda">
+                Este es un depósito de valor, un lugar donde se guardan las monedas de la esperanza.
+              </p>
             </div>
-            <p>
-              Este es un depósito de valor, un lugar donde se guardan las monedas de la esperanza.
-            </p>
            </div>
         </div>
+     </div>
+     <div class="quote">
+        <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, a? Libero dignissimos autem ipsa quasi architecto molestiae saepe commodi quaerat facilis aliquid, sapiente nam totam eveniet perferendis placeat sit repellendus.</h1>
+        <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi aperiam molestias quo quidem quod! Laborum cumque dolor et beatae rerum quod! Beatae earum quia impedit saepe debitis officia culpa consectetur.</h1>
+        <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere incidunt aperiam amet iusto inventore officia, voluptatibus similique in, et necessitatibus accusantium labore recusandae iste! Laboriosam reprehenderit quaerat amet modi quibusdam!</h1>
      </div>
 </body>
 </html>
