feat: Finich information section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="presentation">
           <h1>The 42 Project</h1>
           <p>The 42 Project es un proyecto a largo plazo centrado en la adquisición y rédito económico de destrezas de alto valor. Con una filosofía basada en el valor compuesto, se tiene la intención de combinar diferentes áreas en pos de crear un mensaje y una estética únicos. El camino del fundador del 42 Project empieza con el web development.</p>
-          <button>Join Us</button>
+          <button>¡No se asuste!</button>
         </div>
         <img rel="example" src="images/_f4cf726d-8307-4cd6-9c20-6cb35ca96784.jpg" width="200px"> <!--svg ultra mega super-->
       </div>
@@ -64,8 +64,6 @@
         </div>
      </div>
      <div class="quote">
-        <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, a? Libero dignissimos autem ipsa quasi architecto molestiae saepe commodi quaerat facilis aliquid, sapiente nam totam eveniet perferendis placeat sit repellendus.</h1>
-        <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi aperiam molestias quo quidem quod! Laborum cumque dolor et beatae rerum quod! Beatae earum quia impedit saepe debitis officia culpa consectetur.</h1>
         <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere incidunt aperiam amet iusto inventore officia, voluptatibus similique in, et necessitatibus accusantium labore recusandae iste! Laboriosam reprehenderit quaerat amet modi quibusdam!</h1>
      </div>
 </body>
