fix: Formatted html

--- a/index.html
+++ b/index.html
@@ -1,70 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <header>
-    <div class="LOGO">LOGO</div>
-     <div class="links">
-        <ul>
-            <li>Link One</li>
-            <li>Link Two</li>
-            <li>Link Three</li>
-        </ul>
-     </div>
-  </header>
-     <div class="header">
-      <div class="hero">
-        <div class="presentation">
-          <h1>The 42 Project</h1>
-          <p>The 42 Project es un proyecto a largo plazo centrado en la adquisición y rédito económico de destrezas de alto valor. Con una filosofía basada en el valor compuesto, se tiene la intención de combinar diferentes áreas en pos de crear un mensaje y una estética únicos. El camino del fundador del 42 Project empieza con el web development.</p>
-          <button>¡No se asuste!</button>
+    <header>
+        <div class="LOGO">LOGO</div>
+        <div class="links">
+            <ul>
+                <li>Link One</li>
+                <li>Link Two</li>
+                <li>Link Three</li>
+            </ul>
         </div>
-        <img rel="example" src="images/_f4cf726d-8307-4cd6-9c20-6cb35ca96784.jpg" width="200px"> <!--svg ultra mega super-->
-      </div>
-     </div>
-     <div class="information">
-        <div class="prueba"></div>
-        <h1>Razones</h1>
+    </header>
+    <div class="header">
+        <div class="hero">
+            <div class="presentation">
+                <h1>The 42 Project</h1>
+                <p>The 42 Project es un proyecto a largo plazo centrado en la adquisición y rédito económico de destrezas de alto valor. Con una filosofía basada en el valor compuesto, se tiene la intención de combinar diferentes áreas en pos de crear un
+                    mensaje y una estética únicos. El camino del fundador del 42 Project empieza con el web development.</p>
+                <button>¡No se asuste!</button>
+            </div>
+            <img alt="no se asuste!" src="images/_f4cf726d-8307-4cd6-9c20-6cb35ca96784.jpg" width=200>
+            <!--svg ultra mega super-->
+        </div>
+    </div>
+    <div class="information">
+        <div class="background"></div>
         <div class="boxes">
-           <div class="box">
-              <img src="./images/_18cecc15-d044-4bec-b0f3-c5b56b2642c8.jpg" alt="dark wizard" width="250px">
-              <p class="leyenda">
-                Aquí se almacenarán las recetas de la vida, se irán añadiendo. 
-              </p>
-           </div>
-           <div class="box">
-            <div>
-              <img src="./images/inner breath and his benefits 4.jpg"  alt="inner breath" width="250px">
-              <p class="leyenda">
-                Se hará un seguimiento del desarrollo de los procesos internos. 
-              </p>
+            <h1>Razones</h1>
+            <div class="boxxes">
+                <div class="box">
+                    <img src="./images/_18cecc15-d044-4bec-b0f3-c5b56b2642c8.jpg" alt="dark wizard" width=200>
+                    <p class="leyenda">
+                        Aquí se almacenarán las recetas de la vida, se irán añadiendo.
+                    </p>
+                </div>
+                <div class="box">
+                    <div>
+                        <img src="./images/inner-breath.jpg" alt="inner breath" width=200>
+                        <p class="leyenda">
+                            Se hará un seguimiento del desarrollo de los procesos internos.
+                        </p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div>
+                        <img src="./images/post_image_medium.jpeg" alt="pi harmony" width=200>
+                        <p class="leyenda">
+                            Se mostrarán las diferentes formas de armonía y equilibrio.
+                        </p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div>
+                        <img src="./images/coins-of-hope.jpg" alt="value" width=200>
+                        <p class="leyenda">
+                            Este es un depósito donde se guardan las monedas de la esperanza.
+                        </p>
+                    </div>
+                </div>
             </div>
-           </div>
-           <div class="box">
-            <div>
-              <img src="./images/post_image_medium.jpeg"  alt="pi harmony" width="250px">
-              <p class="leyenda">
-                Se mostrarán las diferentes formas de armonía y equilibrio.
-              </p>
-            </div>
-           </div>
-           <div class="box">
-            <div>
-              <img src="./images/the coins of hope. this is a special one.jpg" alt="value" width="250px">
-              <p class="leyenda">
-                Este es un depósito de valor, un lugar donde se guardan las monedas de la esperanza.
-              </p>
-            </div>
-           </div>
         </div>
-     </div>
-     <div class="quote">
-        <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere incidunt aperiam amet iusto inventore officia, voluptatibus similique in, et necessitatibus accusantium labore recusandae iste! Laboriosam reprehenderit quaerat amet modi quibusdam!</h1>
-     </div>
+        <div class="quote">
+            <p>“If a man does not keep pace with his companions, perhaps it is because he hears a different drummer. Let him step to the music which he hears, however measured or far away”</p>
+            <p id="author">- Henry David Thoreau</p>
+        </div>
+    </div>
 </body>
+
 </html>
