feat: background header added

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="LOGO">LOGO</div>
         <div class="links">
             <ul>
-                <li>Link One</li>
-                <li>Link Two</li>
-                <li>Link Three</li>
+                <li><a href="">Link One</a></li>
+                <li><a href="">Link Two</a></li>
+                <li><a href="">Link Three</a></li>
             </ul>
         </div>
     </header>
@@ -71,6 +71,12 @@
         <div class="quote">
             <p>“If a man does not keep pace with his companions, perhaps it is because he hears a different drummer. Let him step to the music which he hears, however measured or far away”</p>
             <p id="author">- Henry David Thoreau</p>
+            <div id="f">
+              <div id="n">
+                <div id="l"></div>
+                <button></button>
+              </div>
+            </div>
         </div>
     </div>
 </body>
