feat: Add footer

--- a/index.html
+++ b/index.html
@@ -73,11 +73,19 @@
             <p id="author">- Henry David Thoreau</p>
             <div id="f">
               <div id="n">
-                <div id="l"></div>
-                <button></button>
+                <div id="l">
+                    <p>¡Únete a nosotros!</p>
+                    <p>Empieza aquí tu viaje a lo desconocido</p>
+                </div>
+                <button class="button">¡No se asuste!</button>
               </div>
             </div>
         </div>
+    </div>
+    <div class="footer">
+         <footer>
+           Copyright The Odin Project 2024
+         </footer>
     </div>
 </body>
 
