feat: Add transform and transition to buttons

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="LOGO">LOGO</div>
         <div class="links">
             <ul>
-                <li><a href="">Link One</a></li>
-                <li><a href="">Link Two</a></li>
-                <li><a href="">Link Three</a></li>
+                <li><a target="_blank" href="https://github.com/Iker1211">GitHub</a></li>
+                <li><a target="_blank" href="https://limewire.com/skocooap47">LimeWire</a></li>
+                <li><a target="_blank" href="https://twitter.com/iker_velez">Twitter</a></li>
             </ul>
         </div>
     </header>
@@ -25,7 +25,7 @@
                 <h1>The 42 Project</h1>
                 <p>The 42 Project es un proyecto a largo plazo centrado en la adquisición y rédito económico de destrezas de alto valor. Con una filosofía basada en el valor compuesto, se tiene la intención de combinar diferentes áreas en pos de crear un
                     mensaje y una estética únicos. El camino del fundador del 42 Project empieza con el web development.</p>
-                <button>¡No se asuste!</button>
+                <button type="button">¡No se asuste!</button>
             </div>
             <img alt="no se asuste!" src="images/_f4cf726d-8307-4cd6-9c20-6cb35ca96784.jpg" width=200>
             <!--svg ultra mega super-->
@@ -76,7 +76,7 @@
                     <p>¡Únete a nosotros!</p>
                     <p>Empieza aquí tu viaje a lo desconocido</p>
                 </div>
-                <button class="button">¡No se asuste!</button>
+                <button class="button" type="button"><a target="_blank" href="https://github.com/Iker1211/landing-page">¡No se asuste!</a></button>
               </div>
             </div>
     </div>
