--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h1>The 42 Project</h1>
                 <p>The 42 Project es un proyecto a largo plazo centrado en la adquisición y rédito económico de destrezas de alto valor. Con una filosofía basada en el valor compuesto, se tiene la intención de combinar diferentes áreas en pos de crear un
                     mensaje y una estética únicos. El camino del fundador del 42 Project empieza con el web development.</p>
-                <button type="button">¡No se asuste!</button>
+                <button type="button"><a target="_blank" href="https://github.com/Iker1211/landing-page">¡No se asuste!</a></button>
             </div>
             <img alt="no se asuste!" src="images/_f4cf726d-8307-4cd6-9c20-6cb35ca96784.jpg" width=200>
             <!--svg ultra mega super-->
